# video-asr-summary-v2

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
scripts/: process_video.py  stress_lark_publish.py
src/video_asr_summary/: __init__.py  asr_client.py  audio.py  lark_docs.py  pipeline.py  summarizer.py
tests/: test_audio_extractor.py  test_bailian_asr.py  test_chatai_summarizer.py  test_lark_docs.py  test_local_clients.py  test_openai_compatible_summarizer.py  test_pipeline.py
