[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "video-asr-summary"
version = "0.1.0"
description = "Video to text summarization pipeline"
authors = [{name = "video-asr-summary maintainers"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
